--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,31 @@
 
 /* Your CSS Code here. */
+*{
+	margin:0;
+	padding:0;
+}
+.holder{
+	display:flex;
+	justify-content:space-between;
+}
+
+.holder>div{
+	width:100px;
+	height:100px;
+	
+}
+
+.holder>div>h1{
+	font-size:50px;
+}
+.red{
+	background:red;
+}
+
+.blue{
+	background:blue;
+}
+
+.green{
+	background:green;
+}
